log
Sun 16 Oct 2022 03:17:50 PM UTC: 
 tests:  0|4
total_score: 0/70
33865ba
Sun 16 Oct 2022 03:48:58 PM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:21: error: ‘heap’ undeclared (first use in this function); did you mean ‘Heap’?
   36 |   Heap * newHeap = (heap *)malloc(sizeof(Heap));
      |                     ^~~~
      |                     Heap
heap.c:36:21: note: each undeclared identifier is reported only once for each function it appears in
heap.c:36:27: error: expected expression before ‘)’ token
   36 |   Heap * newHeap = (heap *)malloc(sizeof(Heap));
      |                           ^
Compilation failed
4e44b0a
